--- a/global.css
+++ b/global.css
@@ -3,8 +3,12 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer base {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
   * {
     @apply m-0 box-border list-none scroll-smooth p-0;
   }
